--- a/home.html
+++ b/home.html
@@ -52,6 +52,7 @@
                     <li class="list">Notion</li>
                     <li class="list">Figma</li>
                     <li class="list">Github</li>
+                    <li class="list">Google</li>
                 </ul>
             </div>
         </div>
