--- a/home.html
+++ b/home.html
@@ -31,7 +31,6 @@
                     <li class="list">HTML</li>
                     <li class="list">CSS</li>
                     <li class="list">SASS</li>
-                    <li class="list">Bootstrap</li>
                     <li class="list">JavaScript</li>
                     <li class="list">Python</li>
                     <li class="list">Django</li>
@@ -40,8 +39,8 @@
             <div class="learning">
                 <p class="heading">Learning</p>
                 <ul>
-                    <li class="list">MySQL</li>
                     <li class="list">ReactJS</li>
+                    <li class="list">Django</li>
                     <li class="list">Czech</li>
                 </ul>
             </div>
@@ -56,11 +55,6 @@
                 </ul>
             </div>
         </div>
-        <div class="working-on">
-            <p class="heading">I'm currently working on:</p>
-            <p class="text">My personal projects on ReactJS.
-            </p>
-        </div>
       </div>
     </section>
     <section>
@@ -69,6 +63,28 @@
         <div class="line"></div>
     </div>
     <div class="projects">
+      <div class="project-container">
+          <div class="project-image">
+              <img src="/assets/projects/groovy-bg.png" alt="">
+          </div>
+          <div class="card">
+              <div class="project-name">Ecommerce Local Store</div>
+              <div class="description">
+                  Ecommerce with filters, categories and subcategories, admin panel. Create, update, delete functionality. Cookies for non authorized person to add products in cart.
+              </div>
+              <div class="build-with">
+                  <ul>
+                      <li>Django</li>
+                      <li>Cookies</li>
+                      <li>JavaScript</li>
+                      <li>CSS</li>
+                  </ul>                    
+              </div>
+              <div class="visit">
+                  <a href="https://groovy-bg.netlify.app/">Visit Site</a>
+              </div>
+          </div>
+        </div>
       <div class="project-container">
           <div class="project-image">
               <img src="/assets/projects/groovy-bg.png" alt="">
