--- a/home.html
+++ b/home.html
@@ -70,13 +70,14 @@
           <div class="card">
               <div class="project-name">Ecommerce Local Store</div>
               <div class="description">
-                  Ecommerce with filters, categories and subcategories, admin panel. Create, update, delete functionality. Cookies for non authorized person to add products in cart.
+                  Ecommerce with filters, categories and subcategories, admin panel. Create, update, delete functionality. Cookies for non authorized person to add products in cart. Checkout checkout with Paypal
               </div>
               <div class="build-with">
                   <ul>
                       <li>Django</li>
                       <li>Cookies</li>
                       <li>JavaScript</li>
+                      <li>PayPal API</li>
                       <li>CSS</li>
                   </ul>                    
               </div>
