--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
     <div class="projects">
       <div class="project-container">
           <div class="project-image">
-              <img src="/assets/projects/groovy-bg.png" alt="">
+              <img src="/assets/projects/ecommerce.jpg" alt="">
           </div>
           <div class="card">
               <div class="project-name">Ecommerce Local Store</div>
@@ -82,7 +82,7 @@
                   </ul>                    
               </div>
               <div class="visit">
-                  <a href="https://groovy-bg.netlify.app/">Visit Site</a>
+                  <a href="https://django-ecommerce-local.herokuapp.com/">Visit Site</a>
               </div>
           </div>
         </div>
